# datasage_data533_step_3

./: .gitignore  coverage.json  fruits_processed.csv  pyproject.toml  readme.md  requirements.txt  search_test.txt  test_data.csv  test_main.py  utils_test.txt
.github/workflows/: python-tests.yml
datasage_store/: chroma.sqlite3
rag_engine/indexing/: index_engine.py  indexing_documentation_updated.md  run_coverage.py  test_index_engine.py  test_vector_store.py
rag_engine/indexing/htmlcov/: class_index.html  embedder_py.html  function_index.html  index.html  index_engine_py.html  status.json  vector_store_py.html
rag_engine/ingestion/: __init__.py  chunker.py  loaders.py  test.py  testsample.txt
rag_engine/ingestion/tests/: test_csv_loader.py  test_suite.py  test_text_chunker.py  test_txt_loader.py
rag_engine/retrieval/: generator.py  retriever.py  test.py
src/rag_engine/indexing/: testing_readme.md
src/rag_engine/ingestion/: documentation.md
src/rag_engine/retrieval/: README.md  documentation.md
tests/: main.py  pyproject.toml  requirements.txt  run_suite.py  test_index_engine.py  test_vector_store.py
tests/.github/workflows/: python-tests.yml
tests/rag_engine/: __init__.py  rag_engine.py
tests/rag_engine/indexing/: index_engine.py  test_index_engine.py  test_suite.py
tests/rag_engine/ingestion/: README.md
tests/rag_engine/ingestion/tests/: test_pdf_loader.py  test_suite.py
tests/rag_engine/retrieval/tests/: test_suite.py
vector_db/: chroma.sqlite3
