[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_engine"
version = "0.1.0"
description = "DataSage RAG Engine"
authors = [{name = "DataSage Team"}]
requires-python = ">=3.8"
dependencies = [
    "chromadb",
    "pytest",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["src"]
